fix: 코드리뷰 수정사항 적용